--- a/IMCSpringBoot/src/main/webapp/index.html
+++ b/IMCSpringBoot/src/main/webapp/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Calculadora de IMC</h2>
-    <form action="http://localhost:8080/IMCServlets/imc" method="post">
+    <form action="http://localhost:8080/IMCSpringBoot/imc" method="post">
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" name="nombre" required>
         <button type="submit">Calcular IMC</button>
