Comienzo de categorias

--- a/vegas-tiendaServlets/src/main/webapp/menu.html
+++ b/vegas-tiendaServlets/src/main/webapp/menu.html
@@ -1,8 +1,8 @@
 <div class="menu">
 	<div class="dropdown">
-	  <button class="dropbtn">Alumnos</button>
+	  <button class="dropbtn">Categoria</button>
 	  <div class="dropdown-content">
-	  <a href="http://localhost:8080/colegio/alumnos/listaralumnos">Listar Alumnos</a>
+	  <a href="http://localhost:8080/tienda/categoria/listadocategorias">Listar Categoría</a>
 	  <a href="http://localhost:8080/colegio/alumnos/insertaralumnos">Insertar Alumnos</a>
 	  <a href="http://localhost:8080/colegio/alumnos/formularioactualizaralumnos">Modificar Alumnos</a>
 	  <a href="http://localhost:8080/colegio/alumnos/formularioborraralumnos">Borrar Alumnos</a>
