Listado e insertar hechos, formulario meter values para que muestre

--- a/vegas-tiendaServlets/src/main/webapp/menu.html
+++ b/vegas-tiendaServlets/src/main/webapp/menu.html
@@ -3,8 +3,8 @@
 	  <button class="dropbtn">Categoria</button>
 	  <div class="dropdown-content">
 	  <a href="http://localhost:8080/tienda/categoria/listadocategorias">Listar Categoría</a>
-	  <a href="http://localhost:8080/colegio/alumnos/insertaralumnos">Insertar Alumnos</a>
-	  <a href="http://localhost:8080/colegio/alumnos/formularioactualizaralumnos">Modificar Alumnos</a>
+	  <a href="http://localhost:8080/tienda/categoria/insertarcategoria">Insertar Categoría</a>
+	  <a href="http://localhost:8080/tienda/categoria/formularioactualizarcategorias">Modificar Categoría</a>
 	  <a href="http://localhost:8080/colegio/alumnos/formularioborraralumnos">Borrar Alumnos</a>
 	  </div>
 	</div>
