--- a/vegas-tiendaServlets/src/main/webapp/menu.html
+++ b/vegas-tiendaServlets/src/main/webapp/menu.html
@@ -2,10 +2,10 @@
 	<div class="dropdown">
 	  <button class="dropbtn">Categoria</button>
 	  <div class="dropdown-content">
-	  <a href="http://localhost:8080/tienda/categoria/listadocategorias">Listar Categoría</a>
-	  <a href="http://localhost:8080/tienda/categoria/insertarcategoria">Insertar Categoría</a>
-	  <a href="http://localhost:8080/tienda/categoria/formularioactualizarcategorias">Modificar Categoría</a>
-	  <a href="http://localhost:8080/colegio/alumnos/formularioborraralumnos">Borrar Alumnos</a>
+	  <a href="http://localhost:8080/tienda/categoria/listadocategorias">Listar Categoria</a>
+	  <a href="http://localhost:8080/tienda/categoria/insertarcategoria">Insertar Categoria</a>
+	  <a href="http://localhost:8080/tienda/categoria/formularioactualizarcategorias">Modificar Categoria</a>
+	  <a href="http://localhost:8080/tienda/categoria/formularioborrarcategoria">Borrar Categoria</a>
 	  </div>
 	</div>
 	
