--- a/vegas-tiendaServlets/src/main/webapp/menu.html
+++ b/vegas-tiendaServlets/src/main/webapp/menu.html
@@ -14,7 +14,7 @@
 	<div class="dropdown">
 		<button class="dropbtn">Productos</button>
 		<div class="dropdown-content">
-			<a href="#">Listar Productos</a>
+			<a href="http://localhost:8080/tienda/producto/listadoproductos">Listar Productos</a>
 			<a href="#">Insertar Producto</a>
 			<a href="#">Modificar Producto</a>
 			<a href="#">Borrar Producto</a>
