[ADD] Listado e insertar hechos

--- a/vegas-tiendaServlets/src/main/webapp/menu.html
+++ b/vegas-tiendaServlets/src/main/webapp/menu.html
@@ -15,9 +15,8 @@
 		<button class="dropbtn">Productos</button>
 		<div class="dropdown-content">
 			<a href="http://localhost:8080/tienda/producto/listadoproductos">Listar Productos</a>
-			<a href="#">Insertar Producto</a>
+			<a href="http://localhost:8080/tienda/producto/insertarproducto">Insertar Producto</a>
 			<a href="#">Modificar Producto</a>
-			<a href="#">Borrar Producto</a>
 		</div>
 	</div>
 
