[ADD] Producto servlets completado, falta spring

--- a/vegas-tiendaServlets/src/main/webapp/menu.html
+++ b/vegas-tiendaServlets/src/main/webapp/menu.html
@@ -16,7 +16,7 @@
 		<div class="dropdown-content">
 			<a href="http://localhost:8080/tienda/producto/listadoproductos">Listar Productos</a>
 			<a href="http://localhost:8080/tienda/producto/insertarproducto">Insertar Producto</a>
-			<a href="#">Modificar Producto</a>
+			<a href="http://localhost:8080/tienda/producto/formularioactualizarproductos">Modificar Producto</a>
 		</div>
 	</div>
 
