--- a/Vegas-tiendaSpring/src/main/webapp/WEB-INF/vistas/menu.html
+++ b/Vegas-tiendaSpring/src/main/webapp/WEB-INF/vistas/menu.html
@@ -1,11 +1,11 @@
 <div class="menu">
 	<div class="dropdown">
-		<button class="dropbtn">Categoria</button>
+		<button class="dropbtn">Categorias</button>
 		<div class="dropdown-content">
-			<a href="http://localhost:8080/tienda/categoria/listadocategorias">Listar Categoria</a>
-			<a href="http://localhost:8080/tienda/categoria/insertarcategoria">Insertar Categoria</a>
-			<a href="http://localhost:8080/tienda/categoria/formularioactualizarcategoria">Modificar Categoria</a>
-			<a href="http://localhost:8080/tienda/categoria/formularioborrarcategoria">Borrar Categoria</a>
+			<a href="http://localhost:8080/tienda/categoria/listadocategorias">Listar categorias</a>
+			<a href="http://localhost:8080/tienda/categoria/insertarcategoria">Insertar categorias</a>
+			<a href="http://localhost:8080/tienda/categoria/formularioactualizarcategoria">Modificar categorias</a>
+			<a href="http://localhost:8080/tienda/categoria/formularioborrarcategoria">Borrar categorias</a>
 		</div>
 	</div>
 
@@ -14,48 +14,49 @@
 	<div class="dropdown">
 		<button class="dropbtn">Productos</button>
 		<div class="dropdown-content">
-			<a href="#">Listar Productos</a>
-			<a href="#">Insertar Producto</a>
-			<a href="#">Modificar Producto</a>
-			<a href="#">Borrar Producto</a>
+			<a href="http://localhost:8080/tienda/productos/listadoproductos">Listar productos</a>
+			<a href="http://localhost:8080/tienda/productos/insertarproducto">Insertar productos</a>
+			<a href="http://localhost:8080/tienda/productos/formularioactualizarproducto">Modificar productos</a>
 		</div>
 	</div>
 
 	<div class="dropdown">
 		<button class="dropbtn">Clientes</button>
 		<div class="dropdown-content">
-			<a href="#">Listar Clientes</a>
-			<a href="#">Insertar Cliente</a>
-			<a href="#">Modificar Cliente</a>
-			<a href="#">Borrar Cliente</a>
+			<a href="#">Listar clientes</a>
+			<a href="#">Insertar clientes</a>
+			<a href="#">Modificar clientes</a>
+			<a href="#">Borrar clientes</a>
 		</div>
 	</div>
 
 	<div class="dropdown">
 		<button class="dropbtn">Proveedores</button>
 		<div class="dropdown-content">
-			<a href="#">Listar Proveedores</a>
-			<a href="#">Insertar Proveedor</a>
-			<a href="#">Modificar Proveedor</a>
-			<a href="#">Borrar Proveedor</a>
+			<a href="#">Listar proveedores</a>
+			<a href="#">Insertar proveedores</a>
+			<a href="#">Modificar proveedores</a>
+			<a href="#">Borrar proveedores</a>
 		</div>
 	</div>
+
 	<div class="dropdown">
 		<button class="dropbtn">Pedidos</button>
 		<div class="dropdown-content">
-			<a href="#">Listar Pedidos</a>
-			<a href="#">Insertar Pedido</a>
-			<a href="#">Modificar Pedido</a>
-			<a href="#">Borrar Pedido</a>
+			<a href="#">Listar pedidos</a>
+			<a href="#">Insertar pedidos</a>
+			<a href="#">Modificar pedidos</a>
+			<a href="#">Borrar pedidos</a>
 		</div>
 	</div>
+
 	<div class="dropdown">
 		<button class="dropbtn">Peticiones</button>
 		<div class="dropdown-content">
-			<a href="#">Listar Peticiones</a>
-			<a href="#">Insertar Peticion</a>
-			<a href="#">Modificar Peticion</a>
-			<a href="#">Borrar Peticion</a>
+			<a href="#">Listar peticiones</a>
+			<a href="#">Insertar peticiones</a>
+			<a href="#">Modificar peticiones</a>
+			<a href="#">Borrar peticiones</a>
 		</div>
 	</div>
 
