[ADD] casi completo servlet, queda corregir borrarCliente

--- a/vegas-tiendaServlets/src/main/webapp/menu.html
+++ b/vegas-tiendaServlets/src/main/webapp/menu.html
@@ -24,10 +24,10 @@
 	<div class="dropdown">
 		<button class="dropbtn">Clientes</button>
 		<div class="dropdown-content">
-			<a href="#">Listar Clientes</a>
-			<a href="#">Insertar Cliente</a>
-			<a href="#">Modificar Cliente</a>
-			<a href="#">Borrar Cliente</a>
+			<a href="http://localhost:8080/tienda/cliente/listadoclientes">Listar Clientes</a>
+			<a href="http://localhost:8080/tienda/cliente/insertarcliente">Insertar Cliente</a>
+			<a href="http://localhost:8080/tienda/cliente/formularioactualizarcliente">Modificar Cliente</a>
+			<a href="http://localhost:8080/tienda/cliente/formularioborrarcliente">Borrar Cliente</a>
 		</div>
 	</div>
 
