Terminar proveedores spring y pasar a spring clientes

--- a/Vegas-tiendaSpring/src/main/webapp/WEB-INF/vistas/menu.html
+++ b/Vegas-tiendaSpring/src/main/webapp/WEB-INF/vistas/menu.html
@@ -33,9 +33,9 @@
 	<div class="dropdown">
 		<button class="dropbtn">Proveedores</button>
 		<div class="dropdown-content">
-			<a href="#">Listar proveedores</a>
-			<a href="#">Insertar proveedores</a>
-			<a href="#">Modificar proveedores</a>
+			<a href="http://localhost:8080/tienda/proveedores/listadoproveedores">Listar proveedores</a>
+			<a href="http://localhost:8080/tienda/proveedores/insertarproveedor">Insertar proveedores</a>
+			<a href="http://localhost:8080/tienda/proveedores/formularioactualizarproveedor">Modificar proveedores</a>
 			<a href="#">Borrar proveedores</a>
 		</div>
 	</div>
