[ADD] Servlet Spring de Clientes terminado y Proveedores Spring terminado

--- a/Vegas-tiendaSpring/src/main/webapp/WEB-INF/vistas/menu.html
+++ b/Vegas-tiendaSpring/src/main/webapp/WEB-INF/vistas/menu.html
@@ -23,10 +23,10 @@
 	<div class="dropdown">
 		<button class="dropbtn">Clientes</button>
 		<div class="dropdown-content">
-			<a href="#">Listar clientes</a>
-			<a href="#">Insertar clientes</a>
-			<a href="#">Modificar clientes</a>
-			<a href="#">Borrar clientes</a>
+			<a href="http://localhost:8080/tienda/clientes/listadoclientes">Listar clientes</a>
+			<a href="http://localhost:8080/tienda/clientes/insertarcliente">Insertar clientes</a>
+			<a href="http://localhost:8080/tienda/clientes/formularioactualizarcliente">Modificar clientes</a>
+			<a href="http://localhost:8080/tienda/clientes/formularioborrarcliente">Borrar clientes</a>
 		</div>
 	</div>
 
@@ -36,7 +36,7 @@
 			<a href="http://localhost:8080/tienda/proveedores/listadoproveedores">Listar proveedores</a>
 			<a href="http://localhost:8080/tienda/proveedores/insertarproveedor">Insertar proveedores</a>
 			<a href="http://localhost:8080/tienda/proveedores/formularioactualizarproveedor">Modificar proveedores</a>
-			<a href="#">Borrar proveedores</a>
+			<a href="http://localhost:8080/tienda/proveedores/formularioborrarproveedor">Borrar proveedores</a>
 		</div>
 	</div>
 
