--- a/Vegas-tiendaSpring/src/main/webapp/WEB-INF/vistas/menu.html
+++ b/Vegas-tiendaSpring/src/main/webapp/WEB-INF/vistas/menu.html
@@ -53,7 +53,7 @@
 	<div class="dropdown">
 		<button class="dropbtn">Peticiones</button>
 		<div class="dropdown-content">
-			<a href="#">Listar peticiones</a>
+			<a href="http://localhost:8080/tienda/peticiones/listadopeticiones">Listar peticiones</a>
 			<a href="#">Insertar peticiones</a>
 			<a href="#">Modificar peticiones</a>
 			<a href="#">Borrar peticiones</a>
