--- a/Vegas-tiendaSpring/src/main/webapp/WEB-INF/vistas/menu.html
+++ b/Vegas-tiendaSpring/src/main/webapp/WEB-INF/vistas/menu.html
@@ -54,8 +54,8 @@
 		<button class="dropbtn">Peticiones</button>
 		<div class="dropdown-content">
 			<a href="http://localhost:8080/tienda/peticiones/listadopeticiones">Listar peticiones</a>
-			<a href="#">Insertar peticiones</a>
-			<a href="#">Modificar peticiones</a>
+			<a href="http://localhost:8080/tienda/peticiones/insertarpeticion">Insertar peticiones</a>
+			<a href="http://localhost:8080/tienda/peticiones/formularioactualizarpeticiones">Modificar peticiones</a>
 			<a href="#">Borrar peticiones</a>
 		</div>
 	</div>
