--- a/Vegas-tiendaSpring/src/main/webapp/WEB-INF/vistas/menu.html
+++ b/Vegas-tiendaSpring/src/main/webapp/WEB-INF/vistas/menu.html
@@ -56,7 +56,7 @@
 			<a href="http://localhost:8080/tienda/peticiones/listadopeticiones">Listar peticiones</a>
 			<a href="http://localhost:8080/tienda/peticiones/insertarpeticion">Insertar peticiones</a>
 			<a href="http://localhost:8080/tienda/peticiones/formularioactualizarpeticiones">Modificar peticiones</a>
-			<a href="#">Borrar peticiones</a>
+			<a href="http://localhost:8080/tienda/peticiones/formularioborrarpeticion">Borrar peticiones</a>
 		</div>
 	</div>
 
