[ADD] Comienzo pedidos

--- a/Vegas-tiendaSpring/src/main/webapp/WEB-INF/vistas/menu.html
+++ b/Vegas-tiendaSpring/src/main/webapp/WEB-INF/vistas/menu.html
@@ -43,7 +43,7 @@
 	<div class="dropdown">
 		<button class="dropbtn">Pedidos</button>
 		<div class="dropdown-content">
-			<a href="#">Listar pedidos</a>
+			<a href="http://localhost:8080/tienda/pedidos/listarpedidos">Listar pedidos</a>
 			<a href="#">Insertar pedidos</a>
 			<a href="#">Modificar pedidos</a>
 			<a href="#">Borrar pedidos</a>
