[FIX-ADD] Listado arreglado y actualizado completado

--- a/Vegas-tiendaSpring/src/main/webapp/WEB-INF/vistas/menu.html
+++ b/Vegas-tiendaSpring/src/main/webapp/WEB-INF/vistas/menu.html
@@ -45,8 +45,7 @@
 		<div class="dropdown-content">
 			<a href="http://localhost:8080/tienda/pedidos/listarpedidos">Listar pedidos</a>
 			<a href="#">Insertar pedidos</a>
-			<a href="#">Modificar pedidos</a>
-			<a href="#">Borrar pedidos</a>
+			<a href="http://localhost:8080/tienda/pedidos/formularioactualizarpedidos">Modificar pedidos</a>
 		</div>
 	</div>
 
