[ADD] Calcular precio hay que cambiarlo

--- a/Vegas-tiendaSpring/src/main/webapp/WEB-INF/vistas/menu.html
+++ b/Vegas-tiendaSpring/src/main/webapp/WEB-INF/vistas/menu.html
@@ -44,7 +44,7 @@
 		<button class="dropbtn">Pedidos</button>
 		<div class="dropdown-content">
 			<a href="http://localhost:8080/tienda/pedidos/listarpedidos">Listar pedidos</a>
-			<a href="#">Insertar pedidos</a>
+			<a href="http://localhost:8080/tienda/pedidos/insertarpedido">Insertar pedidos</a>
 			<a href="http://localhost:8080/tienda/pedidos/formularioactualizarpedidos">Modificar pedidos</a>
 		</div>
 	</div>
