--- a/Vegas-tiendaSpring/src/main/webapp/WEB-INF/vistas/menu.html
+++ b/Vegas-tiendaSpring/src/main/webapp/WEB-INF/vistas/menu.html
@@ -1,3 +1,4 @@
+<a href="http://localhost:8080/tienda/logout"> Logout </a>
 <div class="menu">
 	<div class="dropdown">
 		<button class="dropbtn">Categorias</button>
